--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -1,23 +1,10 @@
 ---
-const siteInfo = {
-  siteName: '明日はもっといい自分',
-  siteDesc: 'アジャイルやマネジメントについて色々書く個人ブログ',
-}
+import { siteName, siteDescription } from '@data/site'
 
-let {title} = Astro.props;
-let {desc} = Astro.props;
-let {img} = Astro.props;
-let {twitterUsername} = Astro.props;
-
-if(!title) {
-  title = siteInfo.siteName
-}
-if(!desc) {
-  desc = siteInfo.siteDesc
-}
-if(!img) {
-  img = Astro.site+'card.png'
-}
+const title = Astro.props?.title || siteName;
+const description = Astro.props?.description || siteDescription;
+const image = Astro.props?.img || `${Astro.site}card.png`;
+const { twitterUsername } = Astro.props;
 ---
 
 <head>
@@ -28,19 +15,19 @@ if(!img) {
 
   <!-- core -->
 	{title && <title>{title}</title>}
-	{desc && <meta name="description" content={desc}>}
+	{description && <meta name="description" content={description}>}
 	<!-- twitter -->
 	<meta name="twitter:card" content="summary_large_image" />
 	{title && <meta name="twitter:title" content={title} />}
-	{desc && <meta name="twitter:description" content={desc} />}
-	<meta name="twitter:image" content={img} />
+	{description && <meta name="twitter:description" content={description} />}
+	<meta name="twitter:image" content={image} />
 	{title && <meta name="twitter:image:alt" content={title} />}
 	{twitterUsername && <meta name="twitter:site" content={twitterUsername}/>}
 	{twitterUsername && <meta name="twitter:creator" content={twitterUsername}/>}
 	<!-- og -->
 	{title && <meta property="og:title" content={title} />}
-	{desc && <meta property="og:description" content={desc} />}
-	<meta property="og:image" content={img} />
+	{description && <meta property="og:description" content={description} />}
+	<meta property="og:image" content={image} />
 	{title && <meta property="og:image:alt" content={title} />}
 	{title && <meta property="og:site_name" content={title} />}
 	<meta property="og:type" content="object" />
