--- a/src/components/layouts/blog.astro
+++ b/src/components/layouts/blog.astro
@@ -4,20 +4,15 @@ import Navbar from "@components/Navbar";
 import Footer from "@components/Footer";
 import Head from '@components/Head'
 const {title} = Astro.props;
-const {desc} = Astro.props;
+const {description} = Astro.props;
 const {img} = Astro.props;
 ---
 <html lang="ja">
 <Head
 	title={title}
-	desc={desc}
+	description={description}
 	img={img}
->
-	<script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-</Head>
+/>
 <body class="flex flex-col items-center h-screen h-[100svh]">
 	<div class="w-full max-w-3xl flex-grow">
 		<Navbar />
