format *.astro files

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,13 @@
 <footer class="footer footer-center p-4">
   <div>
     <p class="text-xs text-base-content/70">
-      &copy; {(new Date()).getFullYear()} –
-      <a class="link" href="https://twitter.com/yama_sitter" target="_blank" rel="noopener noreferrer">
+      &copy; {new Date().getFullYear()} –
+      <a
+        class="link"
+        href="https://twitter.com/yama_sitter"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
         yama_sitter
       </a>
     </p>
