--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,5 +5,11 @@ import Page from "@layouts/page";
 <Page title="About me">
 	<h1>About me</h1>
 	<p>WIP</p>
-	<p><a href="https://twitter.com/yama_sitter" target="_blank" rel="noopener noreferrer">Twitter</a></p>
+	<p>
+		<a
+			href="https://twitter.com/yama_sitter"
+			target="_blank"
+			rel="noopener noreferrer">Twitter</a
+		>
+	</p>
 </Page>
