--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { fetchArticles } from "@lib/api"
+import { fetchArticles } from "@lib/api";
 import Blog from "@layouts/blog";
 import Preview from "@components/blog/preview";
 
