--- a/src/components/blog/preview.astro
+++ b/src/components/blog/preview.astro
@@ -1,24 +1,32 @@
 ---
-import type { Article } from '@lib/api';
-import { stripHtml } from '@lib/strip-html'
+import type { Article } from "@lib/api";
+import { stripHtml } from "@lib/strip-html";
 import Date from "@components/utilities/Date";
 
-const article: Article = Astro.props.article
-const foreword = stripHtml(article.body)
+const article: Article = Astro.props.article;
+const foreword = stripHtml(article.body);
 ---
 
 <div class="py-6 flex flex-row-reverse justify-between md:gap-10 items-start">
-	{article.image &&
-		<a href={`/${article.id}`} class="shrink-0">
-			<img src={article.image.url} alt={article.title} width="160" height="160" class="w-20 h-20 md:w-40 md:h-40 rounded bg-base-200 object-cover" />
-		</a>
+	{
+		article.image && (
+			<a href={`/${article.id}`} class="shrink-0">
+				<img
+					src={article.image.url}
+					alt={article.title}
+					width="160"
+					height="160"
+					class="w-20 h-20 md:w-40 md:h-40 rounded bg-base-200 object-cover"
+				/>
+			</a>
+		)
 	}
 	<div class="flex flex-col gap-4">
 		<h2 class="text-2xl font-bold">
 			<a class="hover:underline" href={`/${article.id}`}>{article.title}</a>
 		</h2>
 		<span class="badge badge-ghost">
-			<Date date={article.publishedAt}/>
+			<Date date={article.publishedAt} />
 		</span>
 		<p class="text-sm text-base-content/70 truncated">{foreword}</p>
 	</div>
