--- a/src/components/utilities/Date.astro
+++ b/src/components/utilities/Date.astro
@@ -1,8 +1,11 @@
 ---
-const {date} = Astro.props;
+const { date } = Astro.props;
 
-const formattedDate = new Intl.DateTimeFormat('ja-JP', {
-  year: 'numeric', month: 'numeric', day: 'numeric'
-}).format(Date.parse(date))
+const formattedDate = new Intl.DateTimeFormat("ja-JP", {
+  year: "numeric",
+  month: "numeric",
+  day: "numeric",
+}).format(Date.parse(date));
 ---
+
 <time datetime={date}>{formattedDate}</time>
