replace Footer component to React

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE_NAME, SITE_DESCRIPTION } from "@constants/site";
+import { SITE_NAME, SITE_DESCRIPTION } from "@constants";
 
 const title = Astro.props?.title || SITE_NAME;
 const description = Astro.props?.description || SITE_DESCRIPTION;
