--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE_NAME, SITE_NAVIGATION } from "@constants/site";
+import { SITE_NAME, SITE_NAVIGATION } from "@constants";
 ---
 
 <div class="navbar bg-base-100">
