--- a/src/components/layouts/page.astro
+++ b/src/components/layouts/page.astro
@@ -1,24 +1,20 @@
 ---
 import "../../style/global.css";
 import Navbar from "@components/Navbar";
-import Footer from "@components/Footer";
 import Head from "@components/Head";
+import { Footer } from "@tmp-components/Footer"
+import { CopyRight } from "@tmp-components/CopyRight"
+import { TWITTER_ACCOUNT_ID, TWITTER_ACCOUNT_URL } from "@constants";
+
 const { title } = Astro.props;
-const { desc } = Astro.props;
+const { description } = Astro.props;
 const { img } = Astro.props;
+
+const year = new Date().getFullYear()
 ---
 
-<html lang="en">
-	<Head title={title} desc={desc} img={img}>
-		<script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"
-		></script>
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
-			rel="stylesheet"
-		/>
-	</Head>
+<html lang="ja">
+	<Head title={title} description={description} img={img} />
 	<body class="flex flex-col items-center h-screen h-[100svh]">
 		<div class="w-full max-w-3xl flex-grow">
 			<Navbar />
@@ -28,6 +24,8 @@ const { img } = Astro.props;
 				</div>
 			</div>
 		</div>
-		<Footer />
+		<Footer>
+			<CopyRight year={year} author={TWITTER_ACCOUNT_ID} link={TWITTER_ACCOUNT_URL} />
+		</Footer>
 	</body>
 </html>
