--- a/src/components/layouts/blog.astro
+++ b/src/components/layouts/blog.astro
@@ -1,6 +1,6 @@
 ---
 import "../../style/global.css";
-import Navbar from "@components/Navbar";
+import { Navbar } from "@tmp-components/Navbar";
 import Head from "@components/Head";
 import { Footer } from "@tmp-components/Footer"
 import { CopyRight } from "@tmp-components/CopyRight"
