--- a/src/components/layouts/blog.astro
+++ b/src/components/layouts/blog.astro
@@ -1,27 +1,28 @@
 ---
 import "../../style/global.css";
+import { Head } from "@tmp-components/Head";
+import { OGP } from "@tmp-components/OGP";
 import { Navbar } from "@tmp-components/Navbar";
-import Head from "@components/Head";
 import { Footer } from "@tmp-components/Footer"
 import { CopyRight } from "@tmp-components/CopyRight"
 import { TWITTER_ACCOUNT_ID, TWITTER_ACCOUNT_URL } from "@constants";
 
-const { title } = Astro.props;
-const { description } = Astro.props;
-const { img } = Astro.props;
-
+const { title, description, image } = Astro.props;
+const url = Astro.site
 const year = new Date().getFullYear()
 ---
 
 <html lang="ja">
-	<Head title={title} description={description} img={img} />
+	<Head>
+    <OGP title={title} description={description} image={image} url={url} />
+  </Head>
 	<body class="flex flex-col items-center h-screen h-[100svh]">
-		<div class="w-full max-w-3xl flex-grow">
-			<Navbar />
-			<div class="p-4 pb-10">
-				<slot />
-			</div>
-		</div>
+    <main class="w-full max-w-3xl flex-grow">
+      <Navbar />
+      <div class="p-4 pb-10">
+        <slot />
+      </div>
+    </main>
 		<Footer>
 			<CopyRight year={year} author={TWITTER_ACCOUNT_ID} link={TWITTER_ACCOUNT_URL} />
 		</Footer>
