--- a/src/pages/[id].astro
+++ b/src/pages/[id].astro
@@ -12,7 +12,7 @@ const article = await fetchArticle(id, { draftKey });
 <Blog
 	title={article.title}
 	description={stripHtml(article.body)}
-	img={article?.image.url || null}
+	image={article?.image.url || null}
 >
 	<div class="py-6 prose lg:prose-lg">
 		{
