change path from tmp-components to components

--- a/src/components/layouts/blog.astro
+++ b/src/components/layouts/blog.astro
@@ -1,10 +1,10 @@
 ---
 import "../../style/global.css";
-import { Head } from "@tmp-components/Head";
-import { OGP } from "@tmp-components/OGP";
-import { Navbar } from "@tmp-components/Navbar";
-import { Footer } from "@tmp-components/Footer"
-import { CopyRight } from "@tmp-components/CopyRight"
+import { Head } from "@components/Head";
+import { OGP } from "@components/OGP";
+import { Navbar } from "@components/Navbar";
+import { Footer } from "@components/Footer"
+import { CopyRight } from "@components/CopyRight"
 import { TWITTER_ACCOUNT_ID, TWITTER_ACCOUNT_URL } from "@constants";
 
 const { title, description, image } = Astro.props;
