--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import { fetchArticles } from "@lib/api";
 import Blog from "@layouts/blog";
-import { Preview } from "@tmp-components/Preview";
+import { Preview } from "@components/Preview";
 
 const articles = await fetchArticles();
 ---
