--- a/src/components/layouts/page.astro
+++ b/src/components/layouts/page.astro
@@ -3,30 +3,41 @@ import "../../style/global.css";
 import { Head } from "@components/Head";
 import { OGP } from "@components/OGP";
 import { Navbar } from "@components/Navbar";
-import { Footer } from "@components/Footer"
-import { CopyRight } from "@components/CopyRight"
-import { TWITTER_ACCOUNT_ID, TWITTER_ACCOUNT_URL } from "@constants";
+import { Footer } from "@components/Footer";
+import { CopyRight } from "@components/CopyRight";
+import {
+  SITE_NAME,
+  SITE_DESCRIPTION,
+  TWITTER_ACCOUNT_ID,
+  TWITTER_ACCOUNT_URL,
+} from "@constants";
 
-const { title, description, image } = Astro.props;
-const url = Astro.site
-const year = new Date().getFullYear()
+const title = Astro.props?.title || SITE_NAME;
+const description = Astro.props?.description || SITE_DESCRIPTION;
+const image = Astro.props?.image;
+const url = Astro.site;
+const year = new Date().getFullYear();
 ---
 
 <html lang="ja">
-	<Head>
+  <Head title={title} description={description}>
     <OGP title={title} description={description} image={image} url={url} />
   </Head>
-	<body class="flex flex-col items-center h-screen h-[100svh]">
+  <body class="flex flex-col items-center h-screen h-[100svh]">
     <main class="w-full max-w-3xl flex-grow">
       <Navbar />
       <div class="p-4 pb-10">
-				<div class="prose lg:prose-lg">
-					<slot />
-				</div>
+        <div class="prose lg:prose-lg">
+          <slot />
+        </div>
       </div>
     </main>
-		<Footer>
-			<CopyRight year={year} author={TWITTER_ACCOUNT_ID} link={TWITTER_ACCOUNT_URL} />
-		</Footer>
-	</body>
+    <Footer>
+      <CopyRight
+        year={year}
+        author={TWITTER_ACCOUNT_ID}
+        link={TWITTER_ACCOUNT_URL}
+      />
+    </Footer>
+  </body>
 </html>
