--- a/src/components/layouts/blog.astro
+++ b/src/components/layouts/blog.astro
@@ -3,7 +3,6 @@ import "../../style/global.css";
 import { Head } from "@components/Head";
 import { OGP } from "@components/OGP";
 import { Navbar } from "@components/Navbar";
-import { Footer } from "@components/Footer";
 import { CopyRight } from "@components/CopyRight";
 import {
   SITE_NAME,
@@ -24,18 +23,22 @@ const year = new Date().getFullYear();
     <OGP title={title} description={description} image={image} url={url} />
   </Head>
   <body class="flex flex-col items-center h-screen h-[100svh]">
-    <main class="w-full max-w-3xl flex-grow">
-      <Navbar />
-      <div class="p-4 pb-10">
-        <slot />
-      </div>
-    </main>
-    <Footer>
-      <CopyRight
-        year={year}
-        author={TWITTER_ACCOUNT_ID}
-        link={TWITTER_ACCOUNT_URL}
-      />
-    </Footer>
+    <div class="w-full max-w-3xl flex-grow">
+      <header>
+        <Navbar />
+      </header>
+      <main>
+        <div class="p-4 pb-10">
+          <slot />
+        </div>
+      </main>
+      <footer class="footer footer-center p-4">
+        <CopyRight
+          year={year}
+          author={TWITTER_ACCOUNT_ID}
+          link={TWITTER_ACCOUNT_URL}
+        />
+      </footer>
+    </div>
   </body>
 </html>
