add interface to astro files

--- a/src/components/layouts/blog.astro
+++ b/src/components/layouts/blog.astro
@@ -11,6 +11,12 @@ import {
   TWITTER_ACCOUNT_URL,
 } from "@constants";
 
+interface Props {
+  title?: string;
+  description?: string;
+  image?: string;
+}
+
 const title = Astro.props?.title || SITE_NAME;
 const description = Astro.props?.description || SITE_DESCRIPTION;
 const image = Astro.props?.image;
